// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton> that renders a radio button should render default radio button correctly 1`] = `
<RadioButton
  disabled={false}
  id="c1"
  name={null}
>
  <div>
    <input
      className="RadioButton__input"
      disabled={false}
      id="c1"
      name={null}
      type="radio"
    />
    <label
      className="RadioButton__label"
      disabled={false}
      htmlFor="c1"
    >
      <span
        className="RadioButton__box"
      >
        <svg
          className="RadioButton__svg"
          height="10px"
          viewBox={
            Array [
              0,
              0,
              10,
              10,
            ]
          }
          width="12px"
        >
          <circle
            cx="5"
            cy="6"
            r="3"
          />
        </svg>
      </span>
    </label>
  </div>
</RadioButton>
`;

exports[`<RadioButton> that renders a radio button should render radio button with props and children correctly 1`] = `
<RadioButton
  disabled={false}
  id="c1"
  name="group_name"
>
  <div>
    <input
      className="RadioButton__input"
      disabled={false}
      id="c1"
      name="group_name"
      type="radio"
    />
    <label
      className="RadioButton__label"
      disabled={false}
      htmlFor="c1"
    >
      <span
        className="RadioButton__box"
      >
        <svg
          className="RadioButton__svg"
          height="10px"
          viewBox={
            Array [
              0,
              0,
              10,
              10,
            ]
          }
          width="12px"
        >
          <circle
            cx="5"
            cy="6"
            r="3"
          />
        </svg>
      </span>
      <Text
        className="RadioButton__text"
        context="default"
        inline={true}
        size="normal"
      >
        <span
          className="Text RadioButton__text"
        >
          Choose me
        </span>
      </Text>
    </label>
  </div>
</RadioButton>
`;
